Bug 454635 - Hovering over panel applet closes edit mode
Summary: Hovering over panel applet closes edit mode
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Other Linux
: VHI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-05-31 01:06 UTC by Nicolas Fella
Modified: 2022-06-09 17:18 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.95
Sentry Crash Report:


Attachments
Screen recording (918.87 KB, video/x-matroska)
2022-06-05 16:54 UTC, Nicolas Fella
Details
Correct screen recording (1.74 MB, video/x-matroska)
2022-06-05 16:55 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2022-05-31 01:06:10 UTC
STEPS TO REPRODUCE
1. Right-click on a panel
2. Enter Edit mode
3. Hover over an applet in the panel

OBSERVED RESULT
The panel leaves edit mode

EXPECTED RESULT
Actions like removing the applet are shown

SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 5.15.4-kde

Works as expected on X11

ADDITIONAL INFORMATION
Comment 1 Nicolas Fella 2022-05-31 01:11:15 UTC
It works fine in 5.24.5
Comment 2 Nicolas Fella 2022-05-31 01:38:00 UTC
The issue seems to be with plasma-framework, in particular https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/500
Comment 3 Luca Carlon 2022-05-31 22:32:14 UTC
I have to say I'm not currently able to reproduce with my build. I'll try to rebuild the entire Plasma.
Comment 4 Nate Graham 2022-06-01 16:50:58 UTC
Hmm, cannot reproduce with today's git master.
Comment 5 Luca Carlon 2022-06-01 21:30:10 UTC
I rebuilt the entire Plasma from master and I still cannot reproduce. Could you provide a video of the issue? Maybe there is something different in our setup.
Comment 6 Nicolas Fella 2022-06-05 16:47:25 UTC
okay, removing the applet seems to work okay now. However, the UI for editing the panel itself (where you can move the panel, set height etc) still disappears when hovering over an applet in the panel. It didn't do that before
Comment 7 Nicolas Fella 2022-06-05 16:54:46 UTC
Created attachment 149484 [details]
Screen recording
Comment 8 Nicolas Fella 2022-06-05 16:55:41 UTC
Created attachment 149485 [details]
Correct screen recording
Comment 9 Nate Graham 2022-06-05 17:23:45 UTC
I have started being able to reproduce this. Just noticed it yesterday.
Comment 10 Luca Carlon 2022-06-05 20:08:04 UTC
Is this confirmed to be related to https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/500?
Comment 11 Nicolas Fella 2022-06-05 20:11:54 UTC
reverting/using the last commit before https://invent.kde.org/frameworks/plasma-framework/-/commit/affcdeed45755321d7d41c83375729abf9018d5f fixes it
Comment 12 Nate Graham 2022-06-05 20:53:25 UTC
I can confirm that.
Comment 13 Luca Carlon 2022-06-06 16:38:10 UTC
I tried on both X11 and Wayland but I'm not able to reproduce the issue in my build. But I'm sure I saw this some weeks ago.

If the problem appears when hovering, these two places come to my mind: https://invent.kde.org/frameworks/plasma-framework/-/blob/affcdeed45755321d7d41c83375729abf9018d5f/src/plasmaquick/dialog.cpp#L1483 and https://invent.kde.org/frameworks/plasma-framework/-/blob/affcdeed45755321d7d41c83375729abf9018d5f/src/plasmaquick/dialog.cpp#L1620. Both require that edges are resizable though.
Comment 14 Nate Graham 2022-06-06 17:24:16 UTC
FWIW I have a left side panel, maybe that's relevant?
Comment 15 Luca Carlon 2022-06-06 22:46:24 UTC
Tried it. Also tried to enable "auto hide". Tried also on the secondary screen.
Is this deterministically reproducible for you?
Comment 16 Nate Graham 2022-06-07 00:13:33 UTC
Yes I'm afraid it's 100% reproducible for me.
Comment 17 Luca Carlon 2022-06-07 05:29:13 UTC
And if you created a new user, with a default setup, does it happen there? If it doesn't, then maybe there is a specific setup needed to reproduce it.
Comment 18 Marco Martin 2022-06-07 08:48:23 UTC
i have everyting from today's master, still cannot reproduce
Comment 19 Marco Martin 2022-06-07 08:49:34 UTC
tried to put a panel on the left, still doesn't happen
Comment 20 Bug Janitor Service 2022-06-08 20:43:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/545
Comment 21 Nate Graham 2022-06-09 17:17:03 UTC
Git commit 94a0495f137d966442b13d05dbf8c215260b35f5 by Nate Graham, on behalf of Luca Carlon.
Committed on 09/06/2022 at 17:16.
Pushed by ngraham into branch 'master'.

Dialog should use the Dock type unless requested otherwise

When the dialog is requested to be always on top, use the Dock window
type instead of the AppletPopup type unless otherwise requested.

M  +5    -1    src/plasmaquick/dialog.cpp

https://invent.kde.org/frameworks/plasma-framework/commit/94a0495f137d966442b13d05dbf8c215260b35f5