Dialog should use the Dock type unless requested otherwise

When the dialog is requested to be always on top, use the Dock window
type instead of the AppletPopup type unless otherwise requested.

BUG: 454635